tests/negative/strict_keyword.expect
error[E0001]: expected identifier
  --> strict_keyword.vit:2:7
    |
  2 |   let bool = 1
    |       ^^^^
  note: see docs/errors.md#E0001
error[E0002]: expected expression
  --> strict_keyword.vit:3:10
    |
  3 |   return bool
    |          ^^^^
note: expected expression (e.g. 1, name, call(), { ... })
  --> strict_keyword.vit:3:10
    |
  3 |   return bool
    |          ^^^^
note: parser will resume after the next token
  --> strict_keyword.vit:3:10
    |
  3 |   return bool
    |          ^^^^
